[gd_scene load_steps=6 format=2]

[ext_resource path="res://launch/Sun.gd" type="Script" id=1]
[ext_resource path="res://launch/sun.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=2]
radius = 120.0

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("planet1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 4 ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 32.473

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="planet1" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 5
frame = 1

[node name="GravityArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GravityArea2D" groups=[
"gravity",
]]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 3 )

[node name="PlanetArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlanetArea2D" groups=[
"planet",
]]
shape = SubResource( 1 )
[connection signal="body_entered" from="GravityArea2D" to="." method="_on_GravityArea2D_body_entered"]
[connection signal="body_exited" from="GravityArea2D" to="." method="_on_GravityArea2D_body_exited"]
[connection signal="body_entered" from="PlanetArea2D" to="." method="_on_PlanetArea2D_body_entered"]
